# pascal-interpreter

./: README.md  pyproject.toml
pascal_intepreter/part1/: interpreter.py  main.py  questions.md  token.py  token_types.py
pascal_intepreter/part10/: interpreter.py  lexer.py  load_program.py  parser.py  token.py
pascal_intepreter/part2/: interpreter.py  main.py  questions.md
pascal_intepreter/part3/: custom_interpreter.py  interpreter.py  questions.md
pascal_intepreter/part4/: convert_grammar_to_parser.py  exercise_interpreter.py  grammar.md  interpreter.py  questions.md  wiki.md
pascal_intepreter/part5/: exercise_interpreter.py  questions.md
pascal_intepreter/part6/: readme.md
pascal_intepreter/part7/: infix_to_lisp_translator.py  infix_to_postfix_translator.py  interpreter.py  parser.py  spi.py  try-genpdot.sh  wiki.md
pascal_intepreter/part8/: ast.py  interpreter.py  lexer.py  parser.py  testunary.pas  token.py  token_type.py
pascal_intepreter/part9/: README.md  ast.py  interpreter.py  lexer.py  parser.py  token_type.py
tests/: test_interpreter.py
tests/part1/: test_interpreter.py
tests/part10/: test_interpreter.py
tests/part2/: test_interpreter.py
tests/part3/: test_custom_interpreter.py  test_interpreter.py
tests/part4/: test_interpreter.py
tests/part5/: test_exercise_interpreter.py
tests/part6/: test_interpreter.py
tests/part7/: test_infix_to_lisp_translator.py  test_infix_to_postfix_translator.py  test_spi.py
tests/part8/: test_interpreter.py  test_lexer.py  test_parser.py
tests/part9/: test_interpreter.py  test_lexer.py  (+1 more)
